ci: wire up Bun tests, typecheck, and lint in CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,23 +6,27 @@ on:
   pull_request:
     branches: [main]
 
+concurrency:
+  group: ci-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      
+
       - name: Setup Bun
         uses: oven-sh/setup-bun@v1
         with:
           bun-version: latest
-      
+
       - name: Install dependencies
         run: bun install
-      
-      - name: Run tests
+
+      - name: Run unit tests
         run: bun test
-      
+
       - name: Type check
         run: bun run typecheck
 
@@ -30,14 +34,23 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      
+
       - name: Setup Bun
         uses: oven-sh/setup-bun@v1
         with:
           bun-version: latest
-      
+
       - name: Install dependencies
         run: bun install
-      
+
       - name: Check formatting
         run: bun run format:check
+
+      - name: Lint sources
+        run: |
+          if bun run lint; then
+            echo "Lint passed";
+          else
+            echo "Lint failed";
+            exit 1;
+          fi
